--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "django (>=6.0,<7.0)",
     "pytest (>=9.0.2,<10.0.0)",
     "ruff (>=0.14.10,<0.15.0)",
-    "psycopg2-binary (>=2.9.11,<3.0.0)"
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "celery (>=5.6.0,<6.0.0)"
 ]
 
 
