add tests, linters

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "pytest (>=9.0.2,<10.0.0)",
     "ruff (>=0.14.10,<0.15.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
-    "celery (>=5.6.0,<6.0.0)"
+    "celery (>=5.6.0,<6.0.0)",
+    "structlog (>=25.5.0,<26.0.0)",
+    "pyright (>=1.1.407,<2.0.0)"
 ]
 
 
