--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,16 @@ authors = [
     {name = "nikita.samoilov0717@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.12,<4.0"
 dependencies = [
-    "django (>=6.0,<7.0)",
+    "django (==5.2)",
     "pytest (>=9.0.2,<10.0.0)",
     "ruff (>=0.14.10,<0.15.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "celery (>=5.6.0,<6.0.0)",
     "structlog (>=25.5.0,<26.0.0)",
-    "pyright (>=1.1.407,<2.0.0)"
+    "pyright (>=1.1.407,<2.0.0)",
+    "django-celery-beat (>=2.8.1,<3.0.0)"
 ]
 
 
