--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "celery (>=5.6.0,<6.0.0)",
     "structlog (>=25.5.0,<26.0.0)",
     "pyright (>=1.1.407,<2.0.0)",
-    "django-celery-beat (>=2.8.1,<3.0.0)"
+    "django-celery-beat (>=2.8.1,<3.0.0)",
+    "pytest-cov (>=7.0.0,<8.0.0)"
 ]
 
 
